# AnagramsKata

./: .gitignore  .gitmodules  README.md
c/: CMakeLists.txt  README.md
c/anagrams_kata/: CMakeLists.txt  anagrams_finder.c  anagrams_finder.h  main.c  tests.c
cplusplus/: CMakeLists.txt  Jamroot.jam  README.md
cplusplus/lib/gmock/: README.md
cplusplus/src/main/: main.cpp
cplusplus/src/main/kata/: AnagramsFinder.cpp  AnagramsFinder.h
cplusplus/src/test/: AnagramsFinderTest.cpp
csharp/: AnagramsKata.sln
csharp/AnagramsKata/: AnagramsFinder.cs  AnagramsKata.csproj  Program.cs
csharp/AnagramsKata.Tests/: AnagramsFinderTest.cs  AnagramsKata.Tests.csproj  UnitTest1.cs
csharp/AnagramsKata.Tests/Properties/: AssemblyInfo.cs
csharp/AnagramsKata/Properties/: AssemblyInfo.cs
golang/: README.md
golang/AnagramsKata/: AnagramsFinder.go  AnagramsFinder_test.go  main.go  wordlist.txt
java/: .classpath  .project
java/.metadata/: version.ini
java/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
java/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
java/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
java/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/: server-config.json
java/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/history/: segments_1
java/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/: segments_2
java/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
java/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
java/src/com/anagramsfinder/: AnagramsFinder.java  Program.java
javascript/: .eslintrc.json  package.json
javascript/lib/: AnagramFinder.js  NotImplementedError.js
javascript/test/: AnagramFinderSpec.js
(+7 files in other folders)
